--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ async function savePart() {
   const main_category = main_category.value;
   const mid_category = mid_category.value;
   const part_name = part_name.value;
-  const quantity = Number(quantity.value);
+  const qty = Number(document.getElementById("quantity").value);
   const location = location.value;
   const note = note.value;
 
